# Ohtu-ryhm-repo-2023

./: .coveragerc  .gitignore  .pylintrc  AppLibrary.py  LICENSE  README.md  db.py  pyproject.toml  routes.py  run_robot_tests.sh  schema.sql  sources.py  users.py  wsgi.py
.github/workflows/: main.yml
documentation/: dod.md  hours.md  loppuraportti.md  retro.md  retro2.md  schema.sql
src/: AppLibrary.py  app.py  bib.py  db.py  routes.py  sources.py  users.py
src/static/: styles.css
src/templates/: add_article.html  add_book.html  add_inproceedings.html  bibtex.html  choose_source_type.html  delete_user.html  index.html  layout.html  login.html  sign_in.html
src/tests/: README.md  add_reference.robot  add_reference_resource.robot  bib_test.py  in_memory_db.py  resource.robot  sign_in_and_login.robot  sign_in_and_login_resource.robot  sources_test.py  users_test.py
src/tests/robot/: AppLibrary.py  add_reference.robot  add_reference_resource.robot  delete_account.robot  delete_reference.robot  download_bib_file.robot  resource.robot  see_references.robot  sign_in_and_login.robot  sign_in_and_login_resource.robot  testing_routes.py
templates/: add_article.html  add_book.html  add_reference.html  index.html  login.html  sign_in.html
tests/: README.md  sources_test.py
