[tool.poetry]
name = "ohtu-ryhm-repo-2023"
version = "0.1.0"
description = ""
authors = ["arttu <arttu.salminen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
