[tool.poetry]
name = "ohtu-ryhm-repo-2023"
version = "0.1.0"
description = ""
authors = ["arttu <arttu.salminen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
