[tool.poetry]
name = "ohtu-ryhm-repo-2023"
version = "0.1.0"
description = ""
authors = ["arttu <arttu.salminen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
requests = "^2.31.0"
pytest-flask = "^1.3.0"


[tool.poetry.group.dev.dependencies]
robotframework = "^6.1.1"
pylint = "^3.0.2"
robotframework-seleniumlibrary = "^6.1.3"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
